--- a/src/components/Workspace.css
+++ b/src/components/Workspace.css
@@ -1,3 +1,10 @@
+#grid-handles-container {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
 .grid-handle {
     position: absolute;
     width: 8px;
@@ -5,4 +12,8 @@
     background-color: gray;
     border-radius: 10px;
     cursor: pointer;
+}
+
+.grid-handle:hover {
+    transform: scale(1.3);
 }
