--- a/src/components/Workspace.css
+++ b/src/components/Workspace.css
@@ -17,3 +17,12 @@
 .grid-handle:hover {
     transform: scale(1.3);
 }
+
+.resize-rect {
+    width: 100px;
+    height: 100px;
+    position: absolute;
+    border: gray 1px solid;
+    opacity: 50%;
+    cursor: pointer;
+}
