--- a/src/components/Workspace.css
+++ b/src/components/Workspace.css
@@ -9,12 +9,24 @@
     position: absolute;
     width: 8px;
     height: 8px;
-    background-color: gray;
     border-radius: 10px;
-    cursor: pointer;
+    cursor: move;
 }
 
 .grid-handle:hover {
+    transform: scale(1.3);
+}
+
+.resize-handle {
+    position: absolute;
+    width: 8px;
+    height: 8px;
+    border-radius: 10px;
+    cursor: nwse-resize;
+    z-index: 1;
+}
+
+.resize-handle:hover {
     transform: scale(1.3);
 }
 
@@ -24,5 +36,9 @@
     position: absolute;
     border: gray 1px solid;
     opacity: 50%;
-    cursor: pointer;
+    cursor: grab;
+}
+
+.resize-rect:active {
+    cursor: grabbing;
 }
